[project]
name = "tiktok-insta-extraction"
version = "0.1.0"
description = "Extract caption and metadata from TikTok and Instagram URLs"
requires-python = ">=3.11"
dependencies = [
    # Track yt-dlp nightly (.dev0 pre-releases). TikTok/Instagram change their
    # internals constantly; nightly patches breakages within hours. The `.dev0`
    # marker opts ONLY yt-dlp into pre-releases — other deps stay on stable.
    # A scheduled GitHub Action (.github/workflows/update-ytdlp.yml) bumps the
    # locked version daily so the deployed service stays fresh without app updates.
    "yt-dlp>=2025.1.0.dev0",
    "anthropic>=0.92.0",
    "pydantic>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
extract = "extract:main"
